--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1> Creating besic index.html</h1>
+    <div>
+        <img width="600px" src="polash.jpg" alt="polash photo">
+    </div>
 </body>
 </html>
